--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -2,12 +2,11 @@
 
 <PageTitle>PersonalFinance</PageTitle>
 
+<NavMenu />
+
 <div class="page">
-   
-    <NavMenu />
-    
     <main>
-        <article class="rz-p-0 rz-p-md-10">
+        <article>
             @Body
         </article>
     </main>
